--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "author": "MathOrGame Team",
   "license": "MIT",
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "vite": "^6.2.0"
   },
   "dependencies": {
